[gd_scene load_steps=6 format=3 uid="uid://bichq7eescje7"]

[ext_resource type="Script" path="res://Tiles/Scripts/water.gd" id="1_h2cib"]
[ext_resource type="Texture2D" uid="uid://codp7bmbf6nsq" path="res://Assets/water&ice-Sheet.png" id="2_npvb0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfwvq"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8bnm"]
size = Vector2(32, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvajq"]
size = Vector2(16.0278, 16.0278)

[node name="Water" type="StaticBody2D"]
collision_layer = 32768
collision_mask = 0
script = ExtResource("1_h2cib")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nfwvq")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_npvb0")
vframes = 2

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_f8bnm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_f8bnm")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(-20, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_f8bnm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(20, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_f8bnm")

[node name="NeighborCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="NeighborCheck"]
position = Vector2(-2.38419e-07, -2.38419e-07)
rotation = 0.785398
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_wvajq")

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="NeighborCheck" to="." method="_on_neighbor_check_body_entered"]
